# SOLCAT

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  package.json
.github/workflows/: deploy.yml
app/pages/: index.tsx
contracts/programs/solcat/: Cargo.toml  lib.rs
programs/solcat-program/: Cargo.toml
programs/solcat-program/src/: error.rs  lib.rs  state.rs
tools/analytics-dashboard/: package.json
tools/analytics-dashboard/pages/: index.tsx
tools/browser-extension/: manifest.json  popup.css  popup.html  popup.js
