[package]
name = "solcat"
version = "0.1.0"
description = "SOLCAT - Solana Ecosystem Guardian"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solcat"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
solana-program = "1.16" 